kuberenetes/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-srv
spec:
  selector:
    app: home
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: laptop-srv
spec:
  selector:
    app: laptop
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mobile-srv
spec:
  selector:
    app: mobile
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8082
      targetPort: 80
